Removed other smells